<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="@color/tan_background"
    tools:context=".fourth">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What Do You Think About This Application ?"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/namefield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/commentfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:inputType="textCapWords" />

    <TextView
        style="@style/Aplikasi"
        android:text="@string/aplikasi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/ya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="30dp"
            android:text="@string/yes"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/tidak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/no"
            android:textSize="16sp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/send" />

</LinearLayout>